# little_dove_AI_bot

./: .dockerignore  .env  .gitignore  Changelog.md  Dockerfile  README.md  bot.py  pyproject.toml  requirements.txt
LLOneBot/: readme.md
config/: filter_keywords.txt
qq-group-admin-plugin/: SDUtils.py  __init__.py  clear.py  config.py  scheduler.py  utils.py
qq-group-admin-plugin/configs/: vip_list.txt
qq-group-message-summary/: SummaryUtils.py  __init__.py  config.py  get_message.py  scheduler.py  summary.py  summarycmd.py
qq-group-rebirth/: SDUtils.py  __init__.py  config.py  rebirth.py  scheduler.py  utils.py
scripts/: crontab  readme.md  send_dingding_message.sh  shutdown.sh  start_WoL.sh  start_frp.sh  start_sd.sh
test/: .env  SummaryUtils_old.py  pyproject.toml  test.py
wordcloud_extra_dict/: stopword.txt
