[project]
name = "little_dove"
version = "0.1.0"
description = "little_dove"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["qq-group-admin-plugin","nonebot_plugin_gocqhttp","haruka_bot","nonebot_plugin_wordcloud","nonebot_plugin_easy_group_manager","qq-group-rebirth","qq-group-message-summary"]


plugin_dirs = ["src/plugins"]
builtin_plugins = []
